# ParallelComputing_UNIFI_Project

./: .gitignore  README.md
image_augmentation/: README.md  experimentationResults.xlsx  image_augmentation.py  image_generation.ipynb
kernel_image_processing/: CMakeLists.txt  README.md  experimentationResults.xlsx
kernel_image_processing/src/: image.h  kernel.h  main.cpp
pattern_recognition/: CMakeLists.txt  README.md  experimentationResults.xlsx
pattern_recognition/mockseries/: mockSeriesGenerator.ipynb
pattern_recognition/src/: algo.cpp  algo.h  main.cpp  parallelDynamicAlgo.cpp  parallelDynamicAlgo.h  parallelDynamicAlgoNoFirstTouch.cpp  parallelDynamicAlgoNoFirstTouch.h  parallelManualAlgo.cpp  parallelManualAlgo.h  parallelManualAlgoNoFirstTouch.cpp  parallelManualAlgoNoFirstTouch.h  parallelSmartStaticAlgo.cpp  parallelSmartStaticAlgo.h  parallelStaticAlgo.cpp  parallelStaticAlgo.h  parallelStaticAlgoNoFirstTouch.cpp  parallelStaticAlgoNoFirstTouch.h  sequentialAlgo.cpp  sequentialAlgo.h
